# teethseal

./: .gitignore  GitHub管理说明.md  README.md  pyproject.toml  小白技术说明书.md
examples/: air_5teeth.json  design_d80_sco2_80c_13p5_to_1mpa.json  design_d80_sco2_80c_13p5_to_3mpa_adaptive.json  design_d80_sco2_80c_adaptive.json  sco2_5teeth.json
src/q2d_labyrinth/: __init__.py  adaptive.py  case.py  cli.py  fluid.py  models.py  solver.py  visualization.py
tests/: test_solver.py
